--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,100 @@
 .App {
   text-align: center;
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: white;
+}
+
+h1 {
+  color: #61dafb;
+}
+
+button {
+  background-color: #61dafb;
+  border: none;
+  color: black;
+  padding: 15px 32px;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+select,
+input[type="text"] {
+  padding: 10px;
+  margin: 8px 0;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 20px;
+}
+
+.scene-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+}
+
+.scene-list-header {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+
+.scene-form {
+  display: flex;
+  flex-direction: column;
+  background: #f5f5f5;
+  padding: 15px;
+  border-radius: 10px;
+}
+
+.scene {
+  border: 1px solid #ccc;
+  padding: 20px;
+  margin: 10px 10px;
+  border-radius: 10px;
+  background-color: #fff;
+  color: #000;
+}
+
+.scene-id,
+.scene-description,
+.scene-location {
+  margin-bottom: 10px;
+}
+
+.scene-character-list {
+  list-style-type: none;
+  padding: 0;
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 20px;
+}
+
+.scene-character-item {
+  display: flex;
+  margin: 10px;
+  background: #f5f5f5;
+  padding: 10px;
+  border-radius: 5px;
+  align-items: center;
+}
+
+.scene-remove-btn {
+  display: block;
+  margin-top: 20px;
+  width: 100%;
+}
+
+.scenes-list {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  align-content: flex-start;
+  flex-wrap: wrap;
 }
